fix(css): added spacing

--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,7 @@
+* {
+  box-sizing: border-box;
+}
+
 body {
   height: 100vh;
   display: flex;
@@ -11,12 +15,14 @@ p {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
     Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
+
 .vcf-splitter {
   display: flex;
   flex-direction: column;
   text-align: center;
   font-family: Arial, sans-serif;
   height: 100%;
+  padding: 20px;
 }
 
 .file-input {
